--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -784,6 +784,10 @@ en:
     default: Default
     default_country_cannot_be_deleted: Default country cannot be deleted
     default_currency: Default currency
+    default_post_categories:
+      articles: Articles
+      news: News
+      resources: Resources
     default_refund_amount: Default Refund Amount
     default_tax: Default Tax
     default_tax_zone: Default Tax Zone
