--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -1549,6 +1549,7 @@ en:
     sales_totals: Sales Totals
     same_as_shipping_address: Same as shipping address
     save_and_continue: Save and Continue
+    save_changes: Save changes
     save_my_address: Save my address
     saving: Saving
     say_no: 'No'
