--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -1056,7 +1056,6 @@ en:
       none: None
     max: 'Max'
     max_items: Max Items
-    member_since: Member Since
     memo: Memo
     meta_description: Meta Description
     meta_keywords: Meta Keywords
@@ -1549,6 +1548,7 @@ en:
     sales_totals: Sales Totals
     same_as_shipping_address: Same as shipping address
     save_and_continue: Save and Continue
+    save_changes: Save changes
     save_my_address: Save my address
     saving: Saving
     say_no: 'No'
